kubernetes-deployments/knowledge-base-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knowledge-base
spec:
  selector:
    matchLabels:
      app: knowledge-base
  template:
    metadata:
      labels:
        app: knowledge-base
    spec:
      restartPolicy: Always
      containers:
        - name: knowledge-base
          image: knowledge-base:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 5002
