kubernetes-deployments/solver-handler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solver-handler
spec:
  selector:
    matchLabels:
      app: solver-handler
  template:
    metadata:
      labels:
        app: solver-handler
    spec:
      restartPolicy: Always
      containers:
        - name: solver-handler
          image: solver-handler:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 5001
