kubernetes-deployments/sunny-cp-handler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sunny-cp-handler
spec:
  selector:
    matchLabels:
      app: sunny-cp-handler
  template:
    metadata:
      labels:
        app: sunny-cp-handler
    spec:
      restartPolicy: Always
      containers:
        - name: sunny-cp-handler
          image: sunny-cp-handler:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 5004
