kubernetes-deployments/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: default
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
