kubernetes-deployments/job-handler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-handler-service
spec:
  selector:
    app: job-handler
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
