kubernetes-deployments/ngrok-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ngrok-ingress
spec:
  ingressClassName: ngrok
  rules:
    - host: awfully-usable-sailfish.ngrok-free.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
